--- a/index.htm
+++ b/index.htm
@@ -518,6 +518,20 @@ function toggleSocketImage() {
 
 
 }
+
+// 禁用右鍵與開發者工具
+        document.addEventListener('contextmenu', event => event.preventDefault());
+        document.addEventListener('keydown', event => {
+    if (event.key === 'F12' || 
+        (event.ctrlKey && event.shiftKey && event.key === 'I') || 
+        (event.ctrlKey && event.key === 'u')) {
+        event.preventDefault();
+    }
+});
+
+
+        
+        
 </script>
 </body>
 </html>
