--- a/index.htm
+++ b/index.htm
@@ -150,7 +150,7 @@
 
         <!-- 側落腳45度接 -->
         <label for="sideJointCount">側落腳45度接示意圖 看完可取消打勾 避免畫面太過於壅擠：</label>
-        <input type="checkbox" id="sideJointOption" onchange="toggleSideJointImage()"> <span> 側落腳45度接工資(5000/個)</span>
+        <input type="checkbox" id="sideJointOption" onchange="toggleSideJointImage()"> <span> 側落腳45度接工資(5000/個)寬度60為準若超過以及美背板45度接工資請洽專人報價</span>
         <input type="number" id="sideJointCount" min="0" placeholder="請輸入數量(若沒有請留空白)">
         <img id="sideJointImage" src="https://i.postimg.cc/CKg5jxd1/45.jpg" alt="45度接示意圖" style="display: none; max-width: 100%; margin-top: 10px;">
 
@@ -197,7 +197,7 @@
 
 
         <!-- 顯示計算結果僅供參考的文字，這裡使用了 style 讓它居中顯示 -->
-        <h4 style="text-align: center; margin-top: 10px;">（計算結果僅供參考）</h4>
+        <h4 style="text-align: center; margin-top: 10px;">（計算結果僅供參考）特殊色系及異型加工請洽詢專人服務</h4>
 
         <button onclick="resetForm()">重置所有填寫內容</button>
 
